Fix page reload button not showing
Page reload button did not appear if image failed to load due to being removed or replaced. It was hard to notice that a page was missing when reading the chapter.

--- a/src/sass/content_ui.scss
+++ b/src/sass/content_ui.scss
@@ -53,6 +53,18 @@
 .fmr-viewer {
   width: auto !important;
 
+  .fmr-img-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .btn-reload {
+    position: relative;
+    top: -180px;
+  }
+
   img {
     margin-bottom: 5px;
   }
